# clux

./: .gitignore  README.md  install.sh  pyproject.toml
plans/: telegram-integration.md
src/clux/: __init__.py  claude.py  cli.py  config.py  db.py  prompt.py  tmux.py
src/clux/tui/: __init__.py  app.py
