[project]
name = "clux"
version = "0.1.0"
description = "Claude Code session manager with tmux integration"
readme = "README.md"
authors = [
    { name = "Zack Ham", email = "zackham@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "textual>=3.0",
    "tomli>=2.0",
    "tomli-w>=1.0",
]

[project.scripts]
clux = "clux.cli:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
