[project]
name = "clux"
version = "0.1.0"
description = "Claude Code session manager with tmux integration"
readme = "README.md"
authors = [
    { name = "Zack Ham", email = "zackham@gmail.com" }
]
requires-python = ">=3.12"
license = "MIT"
keywords = ["claude", "tmux", "session", "ai", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Homepage = "https://github.com/zackham/clux"
Repository = "https://github.com/zackham/clux"

dependencies = [
    "click>=8.1",
    "textual>=3.0",
    "tomli>=2.0",
    "tomli-w>=1.0",
]

[project.scripts]
clux = "clux.cli:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
